# behavior_trees_learning

./: .gitignore  README.md  bt_trace.fbl  bt_trace.json
src/BT_example/: CMakeLists.txt  package.xml
src/BT_example/include/: approach_object.hpp  battery_interface.hpp  convert_from_string.hpp  crossdoor_nodes.hpp  custom_builder.hpp  goal_interface.hpp  gripper_interface.hpp  movebase_node.hpp  my_legacy_move_to.hpp  say_something.hpp  say_something_simple.hpp  think_what_to_say.hpp
src/BT_example/src/: bt_coroutines_node.cpp  bt_crossdoor_node.cpp  bt_factory_message_node.cpp  bt_goal_node.cpp  bt_gripper_interface.cpp  bt_remap_ports_node.cpp  crossdoor_nodes.cpp  movebase_node.cpp
src/BT_example/xml/: message_tree.xml  remapping_ports_tree.xml
src/actionlib_tutorials/: CMakeLists.txt  package.xml
src/actionlib_tutorials/src/: fibonacci_client.cpp  fibonacci_server.cpp
src/behavior-stack-example/skills/rf_modules/action_example/: CMakeLists.txt
src/bt_nav_actions/: CMakeLists.txt  node.bt_move_base.launch  package.xml
src/bt_nav_actions/include/bt_nav_actions/: movebase.h
src/bt_nav_actions/src/: MoveBase.cpp  bt_nav_move_base_node.cpp  send_nav_goals.cpp
src/bt_nav_actions/xml/: go_to_pose.xml  tree_nodes.xml
src/bt_tutorials/: CMakeLists.txt  package.xml
src/bt_tutorials/include/: approach_object.h  calculate_goal.h  convert_from_string.h  convert_from_string.hpp  coroutines.h  coroutines.hpp  crossdoor.h  crossdoor_nodes.hpp  custom_builder.h  gripper_interface.h  legacy_code.h  movebase.h  movebase_node.hpp  print_pose_2d.h  print_pose_2d.hpp  say_something.h  think_what_to_say.h
src/bt_tutorials/src/: ApproachObject.cpp  CalculateGoal.cpp  Coroutines.cpp  CrossDoor.cpp  GripperInterface.cpp  MoveBase.cpp  PrintPose2D.cpp  SaySomething.cpp  ThinkWhatToSay.cpp  bt_crossdoor_node.cpp  bt_custom_builder_node.cpp  bt_factory_node.cpp  bt_mission_node.cpp  bt_my_legacy_move_to_node.cpp  bt_remap_ports_node.cpp  crossdoor_nodes.cpp  gripper_interface.cpp  movebase_node.cpp  t01_bt_node.cpp  t02_bt_message_node.cpp  t03_bt_calculate_goal_node.cpp  t04_bt_move_node.cpp  t05_bt_crossdoor_node.cpp  t06_bt_remap_node.cpp  t07_bt_legacy_node.cpp  t08_bt_custom_builder_node.cpp  t09_bt_coroutines_node.cpp
src/bt_tutorials/xml/: coroutines_tree.xml  crossdoor_tree.xml  message_tree.xml  reactive_sequence.xml  simple_sequence.xml  tree_nodes.xml
src/turtlebot3_bt_nav/: CMakeLists.txt  package.xml
src/turtlebot3_bt_nav/include/turtlebot3_bt_nav/: turtlebot3_actions.h
src/turtlebot3_bt_nav/src/: send_nav_goals.cpp
src/urdf_sim_tutorials/: CMakeLists.txt  package.xml
src/urdf_sim_tutorials/config/: diffdrive.yaml  gripper.yaml
src/urdf_sim_tutorials/launch/: 09-joints.launch  10-head.launch  12-gripper.launch  13-diffdrive.launch  gazebo.launch
src/urdf_sim_tutorials/urdf/: 09-publishjoints.urdf.xacro  10-firsttransmission.urdf.xacro  11-limittransmission.urdf.xacro  12-gripper.urdf.xacro  13-diffdrive.urdf.xacro
src/urdf_tutorials/: CMakeLists.txt  package.xml
src/urdf_tutorials/launch/: display.launch
src/urdf_tutorials/rviz/: urdf.rviz
src/urdf_tutorials/urdf/: 01-myfirst.urdf  02-multishapes.urdf  03-origins copy.urdf  04-materials.urdf  05-visual.urdf  06-flexible.urdf
