<?xml version="1.0"?>
<package format="2">
  <name>bt_nav_actions</name>
  <version>0.0.0</version>
  <description>The bt_nav_actions package</description>
  
  <maintainer email="joaonunocorvo@gmail.com">joao-corvo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>behaviortree_cpp_v3</depend>
  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>std_msgs</depend>
  <depend>move_base_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
