<?xml version="1.0"?>
<package format="2">
  <name>urdf_tutorials</name>
  <version>0.0.0</version>
  <description>The urdf_tutorials package</description>

  <maintainer email="joaonunocorvo@gmail.com">j-corvo></maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <depend>xacro</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>

</package>
